--- a/style.css
+++ b/style.css
@@ -4,3 +4,9 @@ body, html { margin: 0; padding: 0; }
   width: 100vw; height: 100vh;
   background-color: #000;
 }
+
+/* Stage 2: Canvas styling */
+.hero__canvas {
+  display: block;
+  width: 100%; height: 100%;
+}
