--- a/style.css
+++ b/style.css
@@ -1,12 +1,21 @@
-/* Stage 1: Basic styles */
-body, html { margin: 0; padding: 0; }
-.splash__screen {
-  width: 100vw; height: 100vh;
-  background-color: #000;
-}
 
-/* Stage 2: Canvas styling */
-.hero__canvas {
-  display: block;
-  width: 100%; height: 100%;
+/* Stage 5: Splash screen styles */
+.splash__screen {
+  position: fixed; top:0; left:0; width:100vw; height:100%; z-index:10;
 }
+.left {
+  position:absolute; left:0; top:0; width:50%; height:100%;
+  background-color:#161616; border-right:1px solid #161616; transition:transform 1s;
+}
+.left.active { transform:translateX(-100%); border-right:1px solid #ffffff; }
+.right {
+  position:absolute; left:50%; top:0; width:50%; height:100%;
+  background-color:#161616; transition:transform 1s;
+}
+.right.active { transform:translateX(100%); }
+.progress__bar {
+  position:absolute; bottom:0; left:50%; transform:translateX(-50%);
+  width:1px; height:0%; background-color:white; transition:height 1s;
+}
+.progress__bar.complete { opacity:0; }
+.splash__screen.complete { pointer-events:none; }
